syntax = "proto3";

package ozon.dev.price_tracker.api;

option go_package = "gitlab.ozon.dev/N0fail/price-tracker/pkg/api";


service Admin {
  rpc ProductCreate(ProductCreateRequest) returns (ProductCreateResponse) {
  }

  rpc ProductList(ProductListRequest) returns (ProductListResponse) {
  }

  rpc ProductDelete(ProductDeleteRequest) returns (ProductDeleteResponse) {
  }

  rpc PriceTimeStampAdd(PriceTimeStampAddRequest) returns (PriceTimeStampAddResponse) {
  }

  rpc PriceHistory(PriceHistoryRequest) returns (PriceHistoryResponse) {
  }
}

message Product {
  string code = 1;
  string name = 2;
}

message ProductSnapShot {
  string code = 1;
  string name = 2;
  PriceTimeStamp priceTimeStamp = 3;
}

message PriceTimeStamp {
  double price = 1;
  int64 ts    = 2;
}

// ---------------------------------------------------------------------------------------------------------------------
// ProductCreate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message ProductCreateRequest {
  string code     = 1;
  string name     = 2;
}
message ProductCreateResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// ProductList endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message ProductListRequest {}
message ProductListResponse {
  repeated ProductSnapShot productSnapShots = 1;
}

// ---------------------------------------------------------------------------------------------------------------------
// ProductDelete endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message ProductDeleteRequest {
  string code = 1;
}
message ProductDeleteResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// AddPriceTimeStamp endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message PriceTimeStampAddRequest {
  string code = 1;
  int64 ts    = 2;
  double price = 3;
}
message PriceTimeStampAddResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// PriceHistory endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message PriceHistoryRequest {
  string code = 1;
}
message PriceHistoryResponse {
  repeated PriceTimeStamp priceHistory = 1;
}
